# xhec-mlops-project-student

./: Dockerfile.app  Dockerfile.txt  README.md  README2.md  environment.yml  prefect.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: app_config.py  main.py  utils.py
src/web_service/lib/: inference.py  models.py
src/web_service/local_objects/: model.pkl  pipeline.pkl  preprocessor.pkl
